Fix layout issues + change font input

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300&display=swap');
 
 :root{
     --main-font: 'Redressed', cursive;
@@ -86,8 +87,9 @@ form{
     flex-direction:column;
     gap:1rem;
     padding-top: 1rem;
+    padding-bottom:1rem;
     width:100%;
-    height:calc(100%/3);
+    /* height:calc(100%/3); */
     background-color: var(--second-color);
     
     
@@ -95,7 +97,7 @@ form{
 
 .action{
     width:100%;
-    height:calc(100%/3);
+    /* height:calc(100%/3); */
    
 }
 
@@ -128,7 +130,7 @@ form{
     flex-direction: column;
     justify-content: end;
     gap:1rem;
-    padding-bottom: 2rem;
+    padding-bottom: 0.5rem;
     
 }
 
@@ -179,8 +181,8 @@ a[href]{
 .action{
     display:flex;
     flex-direction:column;
-    gap:1.5rem;
-    padding-top:2.5rem;
+    gap:0.5rem;
+    padding-top:0.5rem;
    
  }
 
@@ -202,4 +204,5 @@ a[href]{
 
 input{
     border-radius: 7px;
+    font-family: 'IBM Plex Serif', serif;
 }
